[gd_scene load_steps=4 format=3 uid="uid://dkaekvc0dtpy8"]

[ext_resource type="Script" uid="uid://crpi2ealh73mv" path="res://Scripts/DialogueManager.gd" id="1_5g8uu"]
[ext_resource type="Texture2D" uid="uid://r6dldkgdgpw5" path="res://Assets/Texture/UI Assets/UI Dialogue Box Large.png" id="2_tblw1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_noxhh"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = ExtResource("2_tblw1")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5g8uu")

[node name="BlackBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.043137256, 0.043137256, 0.043137256, 1)

[node name="DialogueBox" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.725
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.19998169
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_noxhh")

[node name="MarginContainer" type="MarginContainer" parent="DialogueBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DialogueLabel" type="RichTextLabel" parent="DialogueBox/MarginContainer"]
custom_minimum_size = Vector2(21, 21)
layout_mode = 2
theme_override_colors/default_color = Color(0.8727458, 0, 0.09599952, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.056
anchor_bottom = 0.106000006
offset_left = 16.0
offset_top = 483.0
offset_right = 1068.488
offset_bottom = 567.312

[node name="HistoryLabel" type="RichTextLabel" parent="ScrollContainer"]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
